# saveables

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
examples/: hdf5_examples.py  sqlite3_examples.py  xml_examples.py
resources/: requirements.txt
resources/vs_code/: launch.json  settings_linux.json  settings_windows.json
src/: python_utils.py
src/base/: base_file.py  base_file_node.py
src/contracts/: constants.py
src/hdf5_format/: h5_file.py  h5_filenode.py
src/saveable/: data_field.py  meta_data.py  saveable.py  utils.py
src/saveables/: python_utils.py
src/saveables/base/: base_file.py  base_file_node.py
src/saveables/contracts/: constants.py  data_type.py
src/saveables/hdf5_format/: h5_file.py  h5_filenode.py
src/saveables/saveable/: data_field.py  meta_data.py  saveable.py  utils.py
src/saveables/sqlite3_format/: sqlite3_commands.py  sqlite3_file.py  sqlite3_filenode.py  sqlite3filedata.py
src/saveables/xml_format/: xml_file.py  xml_filenode.py
src/xml_format/: xml_file.py  xml_filenode.py
tests/: conftest.py
tests/resources/: data.py  mocks.py
tests/test_code_quality/: test_mypy.py
tests/test_integration/: test_base_read.py  test_base_write.py
tests/test_software/: test_package.py
tests/test_software/test_hdf5/: test_write_load_hdf5.py
tests/test_software/test_sqlite3/: test_write_load_sqlite3.py
tests/test_software/test_xml/: test_write_load_xml.py
tests/test_system/test_hdf5/: test_write_load_hdf5.py
tests/test_unit/test_hdf5/: test_h5file_unit.py  test_h5filenode_unit.py  test_hdf5_unit.py
(+7 files in other folders)
