[project]
name = "saveables"
version = "0.1.0"
description = "serialize arbitrary Python objects into structured files"
readme = "README.md"
authors = [{ name = "Timo Wächtler", email = "timo.waechtler@web.de" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "h5py",
]

[project.optional-dependencies]
dev = ["pytest", "mypy"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]